test/files/neg/bug1112.check
bug1112.scala:12: error: wrong number of arguments for method call: (Int)(=> () => Unit)Unit
    call(0,() => System.out.println("here we are"))
    ^
one error found
